--- a/platformio/platformio.ini
+++ b/platformio/platformio.ini
@@ -8,9 +8,9 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:uno]
+[env:mega2560]
 platform = atmelavr
-board = uno
+board = megaatmega2560
 framework = arduino
 build_flags =
   -Werror
