Work in progress

--- a/platformio/platformio.ini
+++ b/platformio/platformio.ini
@@ -12,9 +12,17 @@
 platform = atmelavr
 board = megaatmega2560
 framework = arduino
+upload_port = COM23
+upload_speed = 115200
+monitor_port = COM23
+monitor_speed = 115200
 build_flags =
   -Werror
   -fmax-errors=3
+
+; lib_deps =
+;   pfeerick/elapsedMillis@^1.0.6
+  
 
 
 
