More progress with the implementation.

--- a/platformio/platformio.ini
+++ b/platformio/platformio.ini
@@ -8,20 +8,33 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:mega2560]
-platform = atmelavr
-board = megaatmega2560
+; [env:mega2560]
+; platform = atmelavr
+; board = megaatmega2560
+; framework = arduino
+; upload_port = COM23
+; upload_speed = 115200
+; monitor_port = COM23
+; monitor_speed = 115200
+; build_flags =
+;   -Werror
+;   -fmax-errors=3
+
+[env:f103cb]
+platform = ststm32
+board = genericSTM32F103CB
 framework = arduino
-upload_port = COM23
-upload_speed = 115200
-monitor_port = COM23
-monitor_speed = 115200
+debug_tool = stlink
+upload_protocol = stlink
+; upload_port = COM23
+; upload_speed = 115200
+; monitor_port = COM23
+; monitor_speed = 115200
 build_flags =
   -Werror
   -fmax-errors=3
-
-; lib_deps =
-;   pfeerick/elapsedMillis@^1.0.6
+  -DSERIAL_TX_BUFFER_SIZE=4096
+  -DSERIAL_RX_BUFFER_SIZE=4096
   
 
 
