Work in progress. Command round trip is working but needs cleanup.

--- a/platformio/platformio.ini
+++ b/platformio/platformio.ini
@@ -8,33 +8,31 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-; [env:mega2560]
-; platform = atmelavr
-; board = megaatmega2560
-; framework = arduino
-; upload_port = COM23
-; upload_speed = 115200
-; monitor_port = COM23
-; monitor_speed = 115200
-; build_flags =
-;   -Werror
-;   -fmax-errors=3
 
-[env:f103cb]
+[env:stm32]
+build_type = debug
+debug_init_break = tbreak setup
 platform = ststm32
-board = genericSTM32F103CB
+board = genericSTM32F401CD
 framework = arduino
 debug_tool = stlink
 upload_protocol = stlink
+build_flags =
+  -Og
+  -O0
+  -D PIO_FRAMEWORK_ARDUINO_ENABLE_CDC
+	-D USBCON
+  -Werror
+  -fmax-errors=3
+  -D SERIAL_TX_BUFFER_SIZE=4096
+  -D SERIAL_RX_BUFFER_SIZE=4096
+
+
+
 ; upload_port = COM23
 ; upload_speed = 115200
 ; monitor_port = COM23
 ; monitor_speed = 115200
-build_flags =
-  -Werror
-  -fmax-errors=3
-  -DSERIAL_TX_BUFFER_SIZE=4096
-  -DSERIAL_RX_BUFFER_SIZE=4096
   
 
 
