--- a/platformio/.vscode/settings.json
+++ b/platformio/.vscode/settings.json
@@ -1,5 +1,8 @@
 {
   "files.associations": {
-    "*.tcc": "cpp"
+    "*.tcc": "cpp",
+    "fstream": "cpp",
+    "istream": "cpp",
+    "ostream": "cpp"
   }
 }
