Cleaned up the packet logger.

--- a/platformio/.vscode/settings.json
+++ b/platformio/.vscode/settings.json
@@ -3,6 +3,7 @@
     "*.tcc": "cpp",
     "fstream": "cpp",
     "istream": "cpp",
-    "ostream": "cpp"
+    "ostream": "cpp",
+    "cmath": "cpp"
   }
 }
