--- a/platformio/platformio.ini
+++ b/platformio/platformio.ini
@@ -17,9 +17,8 @@ board = genericSTM32F401CD
 framework = arduino
 debug_tool = stlink
 upload_protocol = stlink
+debug_build_flags = -O0 -ggdb3 -g3
 build_flags =
-  -Og
-  -O0
   -D PIO_FRAMEWORK_ARDUINO_ENABLE_CDC
 	-D USBCON
   -Werror
