--- a/platformio/platformio.ini
+++ b/platformio/platformio.ini
@@ -11,6 +11,8 @@
 
 [env:stm32]
 build_type = debug
+; debug_test = *
+; test_build_src = true
 debug_init_break = tbreak setup
 platform = ststm32
 board = genericSTM32F401CD
