Cleaned up the limits configurations.

--- a/platformio/platformio.ini
+++ b/platformio/platformio.ini
@@ -25,6 +25,8 @@ build_flags =
 	-D USBCON
   -Werror
   -fmax-errors=3
+  -D CONFIG_MAX_PACKET_DATA_LEN=100
+  -D CONFIG_MAX_PENDING_COMMANDS=5
   -D SERIAL_TX_BUFFER_SIZE=4096
   -D SERIAL_RX_BUFFER_SIZE=4096
 
