More progress on the packet data tests. Incomplete.

--- a/platformio/.vscode/settings.json
+++ b/platformio/.vscode/settings.json
@@ -4,6 +4,7 @@
     "fstream": "cpp",
     "istream": "cpp",
     "ostream": "cpp",
-    "cmath": "cpp"
+    "cmath": "cpp",
+    "vector": "cpp"
   }
 }
