--- a/platformio/platformio.ini
+++ b/platformio/platformio.ini
@@ -9,12 +9,11 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 
-[env:stm32]
+[env:mystm32]
 build_type = debug
 ; debug_test = test_packet_data
-; test_build_src = true
-test_filter =
-  test_packet_data
+; test_filter =
+;   test_packet_data
 debug_init_break = tbreak setup
 platform = ststm32
 board = genericSTM32F401CD
