--- a/platformio/platformio.ini
+++ b/platformio/platformio.ini
@@ -11,9 +11,9 @@
 
 [env:mystm32]
 build_type = debug
-; debug_test = test_packet_encoder
+; debug_test = test_packet_decoder
 ; test_filter =
-;    test_packet_encoder
+;    test_packet_decoder
 debug_init_break = tbreak setup
 platform = ststm32
 board = genericSTM32F401CD
