Added unit tests for the client message and command sending.

--- a/platformio/platformio.ini
+++ b/platformio/platformio.ini
@@ -11,9 +11,8 @@
 
 [env:mystm32]
 build_type = debug
-; debug_test = test_packet_decoder
-; test_filter =
-;    test_packet_decoder
+; debug_test = test_serial_packets_client
+; test_filter = test_serial_packets_client
 debug_init_break = tbreak setup
 platform = ststm32
 board = genericSTM32F401CD
