Renamed files and classes and added a test for command timeout.

--- a/platformio/platformio.ini
+++ b/platformio/platformio.ini
@@ -12,7 +12,7 @@
 [env:mystm32]
 build_type = debug
 ; debug_test = test_serial_packets_client
-; test_filter = test_packet_encoder
+; test_filter = test_serial_packets_client
 debug_init_break = tbreak setup
 platform = ststm32
 board = genericSTM32F401CD
