Changed SerialPacketsData to have a static buffer size.

--- a/platformio/platformio.ini
+++ b/platformio/platformio.ini
@@ -9,10 +9,10 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 
-[env:mystm32]
+[env:my_env]
 build_type = debug
-; debug_test = test_serial_packets_client
-; test_filter = test_serial_packets_client
+; debug_test = test_serial_packets_data
+; test_filter = test_serial_packets_data
 debug_init_break = tbreak setup
 platform = ststm32
 board = genericSTM32F401CD
