Switched to the STM32H750 board.

--- a/platformio/platformio.ini
+++ b/platformio/platformio.ini
@@ -8,6 +8,8 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
+; TODO: Remove the build flag when this will get released
+;  https://github.com/platformio/platform-ststm32/pull/695
 
 [env:my_env]
 build_type = debug
@@ -15,16 +17,19 @@ build_type = debug
 ; test_filter = test_serial_packets_data
 debug_init_break = tbreak setup
 platform = ststm32
-board = genericSTM32F401CD
+; board = genericSTM32F401CD
+board = weact_mini_h750vbtx
 framework = arduino
 debug_tool = stlink
 upload_protocol = stlink
 debug_build_flags = -O0 -ggdb3 -g3
 build_flags =
-  -D PIO_FRAMEWORK_ARDUINO_ENABLE_CDC
-	-D USBCON
   -Werror
   -fmax-errors=3
+  -D ARDUINO_WeActMiniH750VBTX
+  -D PIO_FRAMEWORK_ARDUINO_ENABLE_CDC
+	-D USBCON
+  -D ENABLE_HWSERIAL2
   -D CONFIG_MAX_PACKET_DATA_LEN=100
   -D CONFIG_MAX_PENDING_COMMANDS=5
   -D SERIAL_TX_BUFFER_SIZE=4096
